--- a/src/main/gameData/configs/default/configuratorBonusesAssetsFile.json
+++ b/src/main/gameData/configs/default/configuratorBonusesAssetsFile.json
@@ -2,25 +2,24 @@
   "bonuses": {
     "towerBonus": {
       "greenTowerBonus": [
-        {
-          "coin": 1,
-          "wood": 2,
-          "stone": 3,
-          "servants": 4,
-          "faithPoints": 5,
-          "battlePoints": 6,
-          "victoryPoints": 7
-        },
-        {
-          "coin": 10,
-          "wood": 11,
-          "stone": 12,
-          "servants": 13,
-          "faithPoints": 14,
-          "battlePoints": 15,
-          "victoryPoints": 16
-        }
+        {"coin": 1,"wood": 2,"stone": 3,"servants": 4,"faithPoints": 5,"battlePoints": 6,"victoryPoints": 7},
+        {"coin": 10,"wood": 11,"stone": 12,"servants": 13,"faithPoints": 14,"battlePoints": 15,"victoryPoints": 16}
       ]
-    }
+    },
+    "marketBonus":[
+        {"coin":20,"wood":21,"stone":22,"servants":23,"faithPoints":24,"battlePoints":25,"victoryPoints":26},
+        {"coin":30,"wood":31,"stone":32,"servants":33,"faithPoints":34,"battlePoints":35,"victoryPoints":36}
+        ],
+    "faithBonus":[
+      {"coin":40,"wood":41,"stone":44,"servants":43,"faithPoints":44,"battlePoints":45,"victoryPoints":46},
+      {"coin":50,"wood":51,"stone":54,"servants":55,"faithPoints":54,"battlePoints":55,"victoryPoints":56}
+    ],
+    "councilFavoursBonus":[
+      {"coin":80,"wood":81,"stone":88,"servants":83,"faithPoints":88,"battlePoints":85,"victoryPoints":86},
+      {"coin":90,"wood":91,"stone":98,"servants":99,"faithPoints":94,"battlePoints":99,"victoryPoints":96}
+    ],
+    "councilBonus":{"coin":60,"wood":61,"stone":64,"servants":66,"faithPoints":64,"battlePoints":66,"victoryPoints":66},
+    "councilFavours":9,
+    "startingGameBonus":{"coin":70,"wood":71,"stone":74,"servants":77,"faithPoints":74,"battlePoints":77,"victoryPoints":76}
   }
 }
