Temporary fixed bugs in Parser Class. The game now creates correctly, sets up new turns and advances through turns and ages. Exception is thrown when trying to create a game with an illegal number of players. All bugs in setting up a new game and new turn should have been fixed Added more methods to the model. Restored classes which where excluded from compile.

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@
 # Gradle:
 .idea/**/gradle.xml
 .idea/**/libraries
+.idea/libraries/kotlinc.xml
 
 # CMake
 cmake-build-debug/
@@ -78,3 +79,4 @@ buildNumber.properties
 !/.mvn/wrapper/maven-wrapper.jar
 
 # End of https://www.gitignore.io/api/maven,intellij
+.idea/kotlinc.xml
