--- a/pom.xml
+++ b/pom.xml
@@ -40,5 +40,15 @@
       <artifactId>junit</artifactId>
       <version>RELEASE</version>
     </dependency>
+    <dependency>
+      <groupId>com.vdurmont</groupId>
+      <artifactId>emoji-java</artifactId>
+      <version>3.2.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.diogonunes</groupId>
+      <artifactId>JCDP</artifactId>
+      <version>2.0.3.1</version>
+    </dependency>
   </dependencies>
 </project>
