--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
       <artifactId>JCDP</artifactId>
       <version>2.0.3.1</version>
     </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.39</version>
+    </dependency>
 
   </dependencies>
 </project>
