--- a/pom.xml
+++ b/pom.xml
@@ -51,11 +51,11 @@
       <artifactId>JCDP</artifactId>
       <version>2.0.3.1</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
     <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>5.1.39</version>
+      <groupId>org.xerial</groupId>
+      <artifactId>sqlite-jdbc</artifactId>
+      <version>3.15.1</version>
     </dependency>
-
   </dependencies>
 </project>
