--- a/pom.xml
+++ b/pom.xml
@@ -57,5 +57,12 @@
       <artifactId>sqlite-jdbc</artifactId>
       <version>3.15.1</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.0</version>
+    </dependency>
+
   </dependencies>
 </project>
