--- a/src/main/gameData/configs/default/configuratorCardFile.json
+++ b/src/main/gameData/configs/default/configuratorCardFile.json
@@ -119,7 +119,7 @@
               "coin": 3
             }
           }
-        } //dubbio fotonico vfav del consiglio
+        }
       },
       {
         "cardName":"Gold Mine",
@@ -765,10 +765,11 @@
         }
       },
       {
-        "cardName": "Stonemasons' ",
+        "cardName": "Stonemasons' Guild",
         "cardAge": 2,
         "cardAssetsCost": {
-          "wood": 3
+          "wood": 1,
+          "stone": 2
         },
         "cardType": "yellowCard",
         "cardImmediateEffect": {
@@ -778,23 +779,19 @@
         },
         "yellowProductionCost": [
           {
-            "coin": 1
-          },
-          {
-            "coin": 2
+            "stone": 1,
+            "wood":1,
+            "servants":1
           }
         ],
         "yellowProductionResult": [
           {
-            "victoryPoints": 3
-          },
-          {
-            "victoryPoints": 5
+            "victoryPoints": 6
           }
         ],
         "yellowActionStrengths":
         {
-          "productionBonus": 3
+          "productionBonus": 4
         }
       },
 
