add possibility to print a card, add some minor methods

--- a/src/main/gameData/configs/default/configuratorExcommunicationsFile.json
+++ b/src/main/gameData/configs/default/configuratorExcommunicationsFile.json
@@ -80,6 +80,10 @@
       },
       {
         "excommunicationType":"endGameExcommunication",
+        "productionCardCostMalus":{"wood":1,"stone":1}
+      },
+      {
+        "excommunicationType":"endGameExcommunication",
         "onAssetsMalus":[
           {"servants":1,"coin":1,"stone":1,"wood":1},{"victoryPoints":1}
         ]
